[package]
name = "ap_kcp"
version = "0.1.1"
authors = ["black-binary <blackbinary@qq.com>", "Zhang Maiyun <me@maiyun.me>"]
edition = "2021"
license = "MIT"
description = "AP-KCP Protocol Library"

[dependencies]
async-channel = "2"
bytes = "1"
log = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
async-trait = "0.1"
rand = "0.9"
env_logger = "0.11"
bitflags = "2"
fast-async-mutex = "0.6"

num_cpus = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
ring = { version = "0.17", optional = true }
clap = { version = "4", optional = true }

[profile.release]
lto = "fat"
codegen-units = 4

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.14", features = ["flamegraph"] }

[features]
serde_support = ["serde", "serde_derive"]
crypto_support = ["ring"]
build_binary = ["clap", "toml", "crypto_support", "num_cpus", "serde_support"]
full = ["serde_support", "crypto_support"]
default = ["full", "build_binary"]

[[bin]]
name = "ap-kcp-tun"
path = "src/tun.rs"
required-features = ["build_binary"]

[[bench]]
name = "bench"
harness = false
